# rustlang-practice

Perseus-projects/first-app/: Cargo.toml
SvelteRust-projects/Todo-app/backend/: Cargo.toml
SvelteRust-projects/Todo-app/backend/src/: main.rs
Sycamore-projects/test-component/: Cargo.toml  index.html
Sycamore-projects/test-component/src/: app.rs  components.rs  main.rs
Sycamore-projects/test-component/src/components/: button.rs  dropdown.rs  square.rs
Sycamore-projects/test-component/style/: output.css
Tauri-projects/chart-test/: Cargo.toml  Trunk.toml
Tauri-projects/chart-test/src/: app.rs
Tauri-projects/chart-test/src-tauri/: Cargo.toml  tauri.conf.json
Tauri-projects/chat-application/: Cargo.toml
Tauri-projects/chat-application/src-tauri/: Cargo.toml  tauri.conf.json
Tauri-projects/cpclibrary-tauri/: Cargo.toml
Tauri-projects/cpclibrary-tauri/public/: splashscreen.html
Tauri-projects/cpclibrary-tauri/src/: app.rs  main.rs  types.rs
Tauri-projects/cpclibrary-tauri/src-tauri/: Cargo.toml  Tauri.toml  tauri.conf.json
Tauri-projects/cpclibrary-tauri/src-tauri/src/: error.rs  main.rs
Tauri-projects/cpclibrary-tauri/src-tauri/src/ipc/: mod.rs  params.rs  response.rs
Tauri-projects/cpclibrary-tauri/src-tauri/src/model/: mod.rs
Tauri-projects/cpclibrary-tauri/src/components/: headers.rs  loading.rs  mod.rs
Tauri-projects/cpclibrary-tauri/src/components/charts/: bar_chart.rs  line_chart.rs  mod.rs  pie_chart.rs
Tauri-projects/cpclibrary-tauri/src/components/dashboard/: mod.rs  notifications.rs  recent_activity.rs
Tauri-projects/cpclibrary-tauri/src/layouts/: acquisitions_layout.rs  catalogue_layout.rs  circulations_layout.rs  history_layout.rs  main_layout.rs  mod.rs  resources_layout.rs  tables_layout.rs
Tauri-projects/cpclibrary-tauri/src/pages/: error_template.rs  login.rs  mod.rs  profile.rs
Tauri-projects/cpclibrary-tauri/src/pages/circulations/: mod.rs  pending.rs
Tauri-projects/cpclibrary-tauri/src/pages/home/: dashboard.rs  mod.rs
Tauri-projects/cpclibrary-tauri/src/pages/resources/: add_new.rs  lists.rs  mod.rs
Tauri-projects/cpclibrary-tauri/src/pages/tables/: mod.rs  staffs_tables.rs  users_tables.rs
Tauri-projects/cpclibrary-tauri/src/services/: auth.rs
Tauri-projects/desk/: package.json
Tauri-projects/desk/src-tauri/: Tauri.toml
Tauri-projects/desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
Tauri-projects/gulp-inventory/: Cargo.toml  index.html  tailwind.config.js
Tauri-projects/gulp-inventory/src/: app.rs
Tauri-projects/gulp-inventory/src-tauri/: Cargo.toml  tauri.conf.json
Tauri-projects/gulp-inventory/style/: output.css
Tauri-projects/inventory/: Cargo.toml
Tauri-projects/inventory/src-tauri/: Cargo.toml  tauri.conf.json
Tauri-projects/sqlx-tauri/: Cargo.toml
Tauri-projects/sqlx-tauri/src-tauri/: Cargo.toml  tauri.conf.json
Tauri-projects/svelte-tauri/: package.json
Tauri-projects/svelte-tauri/src-tauri/: Cargo.toml  tauri.conf.json
Tauri-projects/sycamore-inventory/: Cargo.toml  index.html
Tauri-projects/sycamore-inventory/.cargo/: config.toml
Tauri-projects/sycamore-inventory/common/src/: lib.rs
Tauri-projects/sycamore-inventory/src/: app.rs  components.rs  events.rs  invoke.rs  main.rs  pages.rs  routes.rs
Tauri-projects/sycamore-inventory/src-tauri/: Cargo.toml  tauri.conf.json
Tauri-projects/sycamore-inventory/src/components/: add_animal.rs  add_owner.rs  anchor.rs  title.rs
Tauri-projects/sycamore-inventory/src/events/: invoke_ev.rs
Tauri-projects/sycamore-inventory/src/layouts/: main_layout.rs
Tauri-projects/sycamore-inventory/src/pages/: add.rs  animal.rs  home.rs  owner.rs
Tauri-projects/sycamore-inventory/style/: output.css
Tauri-projects/tauri-test/: package.json
Tauri-projects/tauri-test/src-tauri/: Tauri.toml
Tauri-projects/test-app/: package.json
Tauri-projects/test-app/src-tauri/: Tauri.toml
Tauri-projects/testing/: Cargo.toml
Tauri-projects/testing/src/: app.rs  main.rs
Tauri-projects/testing/src-tauri/: Cargo.toml  tauri.conf.json
Yew-projects/test-yew-router/: Cargo.toml  index.html
Yew-projects/test-yew-router/src/: app.rs  main.rs
animals-shelter/: Cargo.toml  tailwind.config.js
animals-shelter/api/: Cargo.toml
animals-shelter/api/migrations/: 00-recreate-db.sql  01-create-schemas.sql
animals-shelter/api/src/: config.rs  main.rs
animals-shelter/style/: output.css
animals-shelter/web/: Cargo.toml  Trunk.toml  index.html
animals-shelter/web/src/: app.rs  main.rs
animals-shelter/web/src/layouts/: main_layout.rs
animals-shelter/web/src/pages/: add.rs  animals.rs  home.rs  mod.rs  owners.rs
guessing_game/src/: main.rs
jwt-decode/: Cargo.toml
jwt-decode/src/: main.rs
rust-full-stack/: Cargo.toml
rust-full-stack/.config/: cargo.toml
rust-full-stack/backend/: Cargo.toml
rust-full-stack/backend/migrations/: 00-recreate-db.sql  01-create-schemas.sql
rust-full-stack/backend/src/: error.rs  main.rs
rust-full-stack/backend/src/database/: _dev_utils.rs  db_model.rs  error.rs  mod.rs
rust-full-stack/backend/src/routes/: mod.rs  owner.rs
rust-full-stack/common/: Cargo.toml
rust-full-stack/common/src/: lib.rs
rust-full-stack/frontend/: Cargo.toml
(+15 files in other folders)
