[package]
name = "cpclibrary-tauri-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
leptos_dom = { version = "0.6", features = ["csr"] }
leptonic = { version = "0.5", features = ["csr"] }

serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# time
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }

# chart
charts-rs = "0.3"
leptos-chartistry = "0.1"

# for tauri apis.
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = ["all"] }

[workspace]
members = ["src-tauri"]

[package.metadata.leptonic]
# REQUIRED: Leptonic's build-script will copy the Leptonic themes to this directory.
style-dir = "style"

# REQUIRED: Leptonic's build-script will copy static JS dependencies to this directory.
js-dir = "public/js"
