[package]
name = "sycamore-inventory-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
sycamore = { version = "0.8", features = ["suspense"] }
sycamore-router = "0.8"
# Others
# common = { path = "./common" }

[workspace]
members = [ "common","src-tauri"]
