[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = "0.8"
sycamore-router = "0.8"
wasm-bindgen = "0.2.90"
js-sys = "0.3"
serde = { version = "1.0.195", features = ["derive"] }
anyhow = "1.0.79"
common = { path = "../common" }
futures = "0.3.30"
