[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }

#---- Server
axum = { version = "0.7.4", features = ["macros"] }
tower-http = { version = "0.5.1", features = ["fs", "cors"] }
tower-cookies = "0.10.0"


#---- JSON
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }

#---- Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

#---- Others
strum_macros = "0.25.3"
common = "0.1.0"

[dev-dependencies]
thiserror = "1.0.56"
