[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.7", features = ["csr"] }
leptos_router = { version = "0.5.7", featuers = ["csr"] }
wasm-bindgen = "0.2.90"
serde = { version = "1.0.195", features = ["derive"] }
anyhow = "1.0.79"
common = { version = "0.1.0", path = "../common" }
futures = "0.3.30"
