[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["form"] }
tokio = { version = "1.37", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
axum-error = "0.2"
tower-http = { version = "0.5", features = ["cors"] }
